--- a/frontend-dart/web/index.html
+++ b/frontend-dart/web/index.html
@@ -4,57 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Davide's Portfolio</title>
-    <link rel="stylesheet" href="/web/style.css">
+    <link rel="stylesheet" href="style.css"> <!-- Link al file CSS -->
 </head>
 <body>
     <header>
-        <div class="logo">
-            <h1>Davide Raska</h1>
-            <p>Photographer & Computer Engineer</p>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="#" id="homeLink">Home</a></li>
-                <li><a href="#" id="aboutLink">About Me</a></li>
-                <li><a href="#" id="portfolioLink">Portfolio</a></li>
-                <li><a href="#" id="contactLink">Contact</a></li>
-            </ul>
-        </nav>
+        <h1>Welcome to My Portfolio</h1>
+        <p>This is a simple page with HTML, Dart, and CSS.</p>
     </header>
 
-    <section id="home" class="section">
-        <h2>Welcome to My Portfolio</h2>
-        <p>Explore my work as a photographer and computer engineer.</p>
-        <button id="loadPortfolioButton">Load Portfolio</button>
-    </section>
-
-    <section id="about" class="section">
+    <section id="about">
         <h2>About Me</h2>
         <p>My name is Davide Rasla, I am a passionate photographer and a computer engineer with over 10 years of experience. My love for photography blends with my passion for technology, creating creative and innovative solutions.</p>
     </section>
 
-    <section id="portfolio" class="section">
-        <h2>Portfolio</h2>
-        <div id="gallery">
-            <!-- Image gallery here -->
-        </div>
-    </section>
-
-    <section id="contact" class="section">
-        <h2>Contact</h2>
-        <p>If you're interested in working with me or have any questions, feel free to contact me.</p>
-        <form id="contactForm">
-            <input type="email" placeholder="Your email" id="email" required>
-            <textarea placeholder="Your message" id="message" required></textarea>
-            <button type="submit">Send</button>
-        </form>
+    <section id="portfolio">
+        <h2>My Portfolio</h2>
+        <button id="loadPortfolioButton">Load Portfolio</button>
+        <div id="gallery"></div> <!-- The images will be appended here -->
     </section>
 
     <footer>
-        <p>&copy; 2024 Davide Raska. All rights reserved.</p>
+        <p>&copy; 2024 Davide Rasla</p>
     </footer>
 
-    <script src="/web/main.dart.js"></script> <!-- Dart link -->
-    <script src="/web/script.js"></script>
+    <!-- Include Dart JS (compiled from Dart) -->
+    <script src="main.dart.js"></script>
 </body>
 </html>
