--- a/frontend-dart/web/index.html
+++ b/frontend-dart/web/index.html
@@ -3,31 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Davide's Portfolio</title>
-    <link rel="stylesheet" href="style.css"> <!-- Link al file CSS -->
+    <link rel="preload" href="style.css?v=1.0" as="style">
+    <link rel="stylesheet" href="style.css?v=1.0">
+    <title>Test CSS</title>
 </head>
 <body>
+    <h1>CSS Test</h1>
     <header>
-        <h1>Welcome to My Portfolio</h1>
-        <p>This is a simple page with HTML, Dart, and CSS.</p>
-    </header>
-
-    <section id="about">
-        <h2>About Me</h2>
-        <p>My name is Davide Rasla, I am a passionate photographer and a computer engineer with over 10 years of experience. My love for photography blends with my passion for technology, creating creative and innovative solutions.</p>
-    </section>
-
-    <section id="portfolio">
-        <h2>My Portfolio</h2>
-        <button id="loadPortfolioButton">Load Portfolio</button>
-        <div id="gallery"></div> <!-- The images will be appended here -->
-    </section>
-
-    <footer>
-        <p>&copy; 2024 Davide Rasla</p>
-    </footer>
-
-    <!-- Include Dart JS (compiled from Dart) -->
-    <script src="main.dart.js"></script>
+        <h1>CSS Test2</h1>
+     </header>
 </body>
 </html>
