removed .idea and made api java generic

--- a/frontend-dart/web/index.html
+++ b/frontend-dart/web/index.html
@@ -33,6 +33,8 @@
     <section class="api-section">
         <button id="fetch-data-btn">Fetch Data from Java API</button>
         <div id="api-response"></div>
+        <button id="fetch-data-btn2">Fetch Data from Java API2</button>
+        <div id="api-response2"></div>
     </section>
     <script src="main.dart.js"></script>
 </body>
